--- a/L05_moutain.html
+++ b/L05_moutain.html
@@ -54,7 +54,7 @@
     <div class="rec"></div>
     <img src="images/mountain.jpg" alt="">
     <p>trên bước đường thành công không có dấu chân của kẻ lười biếng</p>
-    <a href="L05_homework.html" target="_blank">HOME</a>
+    <a href="index.html" target="_blank">HOME</a>
 </body>
 
 </html>
